<resources>
    <string name="app_name">Webhut</string>
    <string name="version">Version  </string>
    <string name="reload">Reload</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="help_feedback"><![CDATA[Help & Feedback]]></string>
    <string name="download">Download</string>
    <string name="new_tab">New Tab</string>
    <string name="bookmark">Bookmark</string>
    <string name="new_incognito_tab">New Incognito Tab</string>
    <string name="history">History</string>
    <string name="desktop_site">Desktop site</string>
    <string name="choose_default_search_emgine">Default Search Engine</string>
    <string name="your_browsing_history_will_be_erased_the_moment_you_exit_this_page">Your browsing history will be erased, the moment you exit this page.</string>
    <string name="private_browsing">Private Browsing</string>
    <string name="shared_preference">project.mapobed.webhut.engine</string>
    <string name="google">Google</string>
    <string name="yahoo">Yahoo</string>
    <string name="bing">Bing</string>
    <string name="image_chooser">File Chooser</string>
    <string name="duck_duck_go">Duck Duck Go</string>
    <string name="share_url_via">Share URL via</string>
    <string name="select_valid_url">Select a valid URL to share</string>
    <string name="application_close">Application Closed</string>
    <string name="incognito_mode_started">Incognito Mode Started</string>
    <string name="url_empty">Nothing to reload, URL is empty</string>
    <string name="incognito_mode_closed">Incognito Mode Closed</string>
    <string name="starting_download">Starting download.</string>
    <string name="add_url_as_bookmark">Do you want to add this URL as bookmark?</string>
    <string name="url_wasnt_saved_in_bookmark">URL wasn\'t saved as bookmark</string>
    <string name="add">ADD</string>
    <string name="cancel">CANCEL</string>
    <string name="url_added_as_bookmark">URL was added as bookmark</string>
    <string name="bookmark_empty">Bookmark can\'t be empty. Bookmark couldn\'t be saved</string>
    <string name="doesnt_support_voice_input">This device doesn\'t support voice input</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="linkedin">LinkedIn</string>
    <string name="youtube">Youtube</string>
    <string name="tumblr">Tumblr</string>
    <string name="reddit">Reddit</string>
    <string name="quora">Quora</string>
    <string name="discord">Discord</string>
    <string name="hangout">Hangout</string>
    <string name="github">GitHub</string>
    <string name="gmail">Gmail</string>
    <string name="skype">Skype</string>
    <string name="outlook">Outlook</string>
    <string name="pinterest">Pinterest</string>
    <string name="flipkart">Flipkart</string>
    <string name="amazon">Amazon</string>
    <string name="swiggy">Swiggy</string>
    <string name="stackoverflow">Stack Overflow</string>
    <string name="view_all">View All</string>
    <string name="wikipedia">Wikipedia</string>
    <string name="apple">Apple</string>
    <string name="ebay">Ebay</string>
    <string name="micosoft">Microsoft</string>
    <string name="aajtak">Aajtak</string>
    <string name="hotstar">Hotstar</string>
    <string name="cricbuzz">Circbuzz</string>
    <string name="ndtv">NDTV</string>
    <string name="times_of_india">TOI</string>
    <string name="the_hindu">Hindu</string>
    <string name="myntra">Myntra</string>
    <string name="ajio">AJIO</string>
    <string name="snapdeal">Snapdeal</string>
    <string name="olx">OLX</string>
    <string name="quikr">Quikr</string>
    <string name="gfg">Geeks for Geeks</string>
    <string name="codechef">Codechef</string>
    <string name="internshala">Internshala</string>
    <string name="bitbucket">Bit bucket</string>
    <string name="search_or_enter_web_address">Search or enter web address</string>
    <string name="yor_mapobed">Developed by\nYOR MAPOBED</string>
    <string name="popular_websites">Popular Websites</string>
    <string name="reach_out_to_others">Reach out to others :</string>
    <string name="entertainment">Entertainment :</string>
    <string name="clear_doubts">Clear doubts :</string>
    <string name="shop_online">Shop online :</string>
    <string name="search_engines">Search engines :</string>
    <string name="news_updates">News updates :</string>
    <string name="classified">Classified :</string>
    <string name="website_name">Website Name</string>
    <string name="website_link">Website Link</string>
    <string name="unsuccessful_download">Download won\'t be successful without the permission</string>
    <string name="unsuccessful_upload">Upload won\'t be successful without the permission</string>
    <string name="close_incognito">Close Incognito</string>
    <string name="please_wait_feedback_form">Please wait, loading feedback form for you.</string>
</resources>