<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nor_new_tab"
        android:icon="@drawable/ic_outline_tab_24"
        android:title="@string/new_tab" />

    <item
        android:id="@+id/nor_new_incognito"
        android:icon="@drawable/ic_nor_incognito"
        android:title="@string/new_incognito_tab" />

    <item
        android:id="@+id/nor_reload"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/reload" />

    <item
        android:id="@+id/nor_share"
        android:icon="@drawable/ic_outline_share_24"
        android:title="@string/share" />
    <item
        android:id="@+id/nor_bookmark"
        android:icon="@drawable/ic_outline_bookmarks_24"
        android:title="@string/bookmark" />
    <item
        android:id="@+id/nor_desktop"
        android:icon="@drawable/ic_baseline_computer_24"
        app:actionViewClass="android.widget.ToggleButton"
        android:title="@string/desktop_site" />
    <item
        android:id="@+id/nor_download"
        android:icon="@drawable/ic_download"
        android:title="@string/download" />
    <item
        android:id="@+id/nor_history"
        android:icon="@drawable/ic_baseline_history_24"
        android:title="@string/history" />
    <item
        android:id="@+id/nor_setting"
        android:icon="@drawable/ic_outline_settings_24"
        android:title="@string/settings" />
    <item
        android:id="@+id/nor_help_feedback"
        android:icon="@drawable/ic_outline_feedback_24"
        android:title="@string/help_feedback" />

    <item
        android:id="@+id/nor_exit"
        android:icon="@drawable/ic_baseline_exit_to_app_24"
        android:title="@string/exit" />
</menu>