<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PopularWebsitesActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintBottom_toTopOf="@id/popular_social_websites"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="10dp"
            android:background="@color/firstColor"
            app:layout_scrollFlags="scroll|enterAlways">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/pop_web_title"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:elevation="10dp"
                    android:fontFamily="@font/exo_semibold"
                    android:gravity="center_vertical"
                    android:paddingStart="0dp"
                    android:text="@string/popular_websites"
                    android:textColor="@color/secondColor"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/popular_web_back"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    android:id="@+id/popular_web_back"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/pop_web_title"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/popular_social_websites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_semibold"
            android:padding="5dp"
            android:text="@string/reach_out_to_others"
            android:textColor="@color/secondColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/popular_social_websites_rec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_social_websites_rec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/popular_entertainment_websites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_social_websites" />

        <TextView
            android:id="@+id/popular_entertainment_websites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_semibold"
            android:padding="5dp"
            android:text="@string/entertainment"
            android:textColor="@color/secondColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/popular_entertainment_websites_rec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_social_websites_rec" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_entertainment_websites_rec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/popular_doubts_websites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_entertainment_websites" />

        <TextView
            android:id="@+id/popular_doubts_websites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_semibold"
            android:padding="5dp"
            android:text="@string/clear_doubts"
            android:textColor="@color/secondColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/popular_doubts_websites_rec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_entertainment_websites_rec" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_doubts_websites_rec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@id/popular_shopping_websites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_doubts_websites" />

        <TextView
            android:id="@+id/popular_shopping_websites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_semibold"
            android:padding="5dp"
            android:text="@string/shop_online"
            android:textColor="@color/secondColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/popular_shopping_websites_rec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_doubts_websites_rec" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_shopping_websites_rec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_shopping_websites" />

        <TextView
            android:id="@+id/popular_engine_websites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_semibold"
            android:padding="5dp"
            android:text="@string/search_engines"
            android:textColor="@color/secondColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/popular_engine_websites_rec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_shopping_websites_rec" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_engine_websites_rec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_engine_websites" />

        <TextView
            android:id="@+id/popular_news_websites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_semibold"
            android:padding="5dp"
            android:text="@string/news_updates"
            android:textColor="@color/secondColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/popular_news_websites_rec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_engine_websites_rec" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_news_websites_rec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_news_websites" />

        <TextView
            android:id="@+id/popular_classified_websites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_semibold"
            android:padding="5dp"
            android:text="@string/classified"
            android:textColor="@color/secondColor"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/popular_news_websites_rec" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_classified_websites_rec"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/popular_classified_websites" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>