<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NormalActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/normal_search_top_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/normal_progress_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/normal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/firstColor"
            android:padding="5dp"
            android:paddingStart="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/normal_search_home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingEnd="5dp"
                android:src="@drawable/ic_outline_home_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/normal_search_edit_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/normal_search_edit_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/cardColor"
                android:clickable="true"
                android:fontFamily="@font/exo"
                android:hint="@string/search_or_enter_web_address"
                android:iconifiedByDefault="false"

                android:imeOptions="actionSearch"
                android:inputType="text"
                android:padding="10dp"
                android:paddingStart="10dp"
                android:textColor="@color/secondColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/normal_search_close"
                app:layout_constraintStart_toEndOf="@+id/normal_search_home"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/normal_search_close"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:src="@drawable/ic_round_mic_none_24"
                app:layout_constraintBottom_toBottomOf="@+id/normal_search_edit_text"
                app:layout_constraintEnd_toStartOf="@+id/normal_search_bookmark"
                app:layout_constraintStart_toEndOf="@id/normal_search_edit_text"
                app:layout_constraintTop_toTopOf="@+id/normal_search_edit_text" />

            <ImageView
                android:id="@+id/normal_search_more_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:clickable="true"
                android:src="@drawable/ic_outline_more_vert_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/normal_search_bookmark"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/normal_search_bookmark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/normal_search_more_menu"
                app:layout_constraintStart_toEndOf="@+id/normal_search_close"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_stars_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ProgressBar
        android:id="@+id/normal_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:progress="1"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normal_search_top_cardView" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/nor_swipe_refresh_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normal_progress_bar">

        <WebView
            android:id="@+id/normal_web_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fitsSystemWindows="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/normal_progress_bar" />


    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/normal_no_internet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normal_progress_bar">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animationView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/no_internet"
            app:lottie_speed="1" />

        <TextView
            android:id="@+id/anim_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_semibold"

            android:gravity="center_horizontal"
            android:text="Uh oh \nYour Internet Connection seems to be broken !"
            android:textColor="@color/secondColor"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animationView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/normal_home_page"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/normal_progress_bar"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/normal_popular_websites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo_semibold"
            android:padding="10dp"
            android:text="@string/popular_websites"
            android:textColor="@color/secondColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/normal_popular_rec"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/normal_popular_rec"
            android:layout_width="0dp"

            android:layout_height="wrap_content"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/normal_popular_websites" />



        <TextView
            android:id="@+id/normal_websites_view_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo"
            android:padding="10dp"
            android:text="@string/view_all"
            android:textColor="@color/secondColor"
            app:layout_constraintBottom_toBottomOf="@+id/normal_popular_websites"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/normal_popular_websites" />


        <TextView
            android:id="@+id/developed_by_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/exo"
            android:gravity="center_horizontal"
            android:text="@string/yor_mapobed"
            android:textColor="@color/secondColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>